[package]
name = "poseidon-test"
version = "0.1.0"
edition = "2021"

[dependencies]
light-poseidon = "0.2.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
halo2-ecc = "0.4.1"
halo2-base = "0.4.1"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
ethnum = "1.5.0"
poseidon = {path = "./packages/poseidon"}
halo2curves = {version = "0.6.0",features = ["serde"] }
serde = {version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
hex = "0.4.3"
rand = "0.8.5"
